--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,6 @@ j2ee.server.domain=/home/miriam/glassfish-3.1.1/glassfish/domains/domain1
 j2ee.server.home=/home/miriam/glassfish-3.1.1/glassfish
 j2ee.server.instance=[/home/miriam/glassfish-3.1.1/glassfish:/home/miriam/glassfish-3.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/home/miriam/glassfish-3.1.1
+javac.debug=true
+javadoc.preview=true
 user.properties.file=/home/miriam/.netbeans/7.1/build.properties
