--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.mongo-2.10.1.jar=lib/mongo-2.10.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -38,7 +39,8 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mongo-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -65,7 +67,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
