--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.comum.jar=lib/comum.jar
 file.reference.mongo-2.10.1.jar=lib/mongo-2.10.1.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +41,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mongo-2.10.1.jar}
+    ${file.reference.mongo-2.10.1.jar}:\
+    ${file.reference.comum.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
